# opendelivery

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  README.md  main.cc  run-clang-tidy.py  sendoff.txt
.devcontainer/: devcontainer.json
cloud/: CMakeLists.txt  aws_personalize_client.cc  aws_personalize_client.h  aws_sqs_client.cc  aws_sqs_client.h  cloudwatch_monitoring_client.cc  cloudwatch_monitoring_client.h  dynamodb_feature_store_reader.cc  dynamodb_feature_store_reader.h  kafka_delivery_log_writer.cc  kafka_delivery_log_writer.h  sw_redis_client.cc  sw_redis_client.h
cloud/tests/: CMakeLists.txt  dynamodb_feature_store_reader_tests.cc  kafka_delivery_log_writer_tests.cc
config/: CMakeLists.txt  counters_config.h  execution_config.h  feature_config.h  feature_store_config.h  json.h  paging_config.h  personalize_config.h  platform_config.cc  platform_config.h
config/tests/: CMakeLists.txt  json_tests.cc
controllers/: CMakeLists.txt  deliver.cc  deliver.h  healthz.cc  healthz.h
controllers/tests/: CMakeLists.txt  controllers_tests.cc
controllers/tests/data/: test.json
docker/: Dockerfile  Dockerfile.dev  tester_entrypoint.sh
execution/: CMakeLists.txt  context.h  counters_context.h  executor.h  feature_context.cc  feature_context.h  merge_maps.h  paging_context.h  simple_executor.cc  simple_executor.h  user_agent.h
execution/stages/: CMakeLists.txt  cache.h  compute_distribution_features.cc  compute_distribution_features.h  compute_query_features.cc  compute_query_features.h  compute_ratio_features.cc  compute_ratio_features.h  compute_time_features.cc  compute_time_features.h  counters.cc  counters.h  exclude_user_features.cc  exclude_user_features.h  feature_store_client.h  flatten.cc  flatten.h  init.cc  init.h  init_features.cc  init_features.h  monitoring_client.h  paging.cc  paging.h  personalize_client.h  read_from_feature_store.cc  read_from_feature_store.h  read_from_personalize.cc  read_from_personalize.h  read_from_request.cc  read_from_request.h  redis_client.h  respond.cc  respond.h  sqs_client.h  stage.h  write_out_stranger_features.cc  write_out_stranger_features.h  write_to_delivery_log.cc  write_to_delivery_log.h  (+2 more)
execution/stages/tests/: CMakeLists.txt  compute_distribution_features_tests.cc  compute_query_features_tests.cc  compute_ratio_features_tests.cc  compute_time_features_tests.cc  counters_tests.cc  exclude_user_features_tests.cc  flatten_tests.cc  init_features_tests.cc  init_tests.cc  mock_clients.h  paging_tests.cc  read_from_feature_store_tests.cc  read_from_personalize_tests.cc  read_from_request_tests.cc  respond_tests.cc  stage_tests.cc  write_out_stranger_features_tests.cc  write_to_delivery_log_tests.cc  write_to_monitoring_tests.cc
execution/tests/: CMakeLists.txt  configure_simple_executor_tests.cc  feature_context_tests.cc  simple_executor_tests.cc
singletons/: CMakeLists.txt  aws.h  cache.h  config.cc  config.h  counters.cc  counters.h  env.h  feature.cc  feature.h  paging.cc  paging.h  redis_client_array.cc  redis_client_array.h  singleton.h  user_agent.cc  user_agent.h  user_agent.yaml
singletons/tests/: CMakeLists.txt  config_tests.cc  counters_tests.cc  env_tests.cc  feature_tests.cc  user_agent_tests.cc
singletons/tests/data/: test.json
submodules/: CMakeLists.txt
utils/: CMakeLists.txt  geo.cc  geo.h  math.h  network.cc  network.h  time.cc  time.h  uuid.cc  uuid.h
utils/tests/: CMakeLists.txt  geo_tests.cc  network_tests.cc  time_tests.cc  uuid_tests.cc
